#4: Implement decorator of standard translator for automatic registration of missed translations.

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -10,7 +10,12 @@ services:
 
     Aeliot\Bundle\TransMaintain\Service\:
         resource: '../../Service/*'
-        exclude: '../../Service/{Yaml/TransformationConveyor.php}'
+        exclude: '../../Service/{Translator.php,Yaml/TransformationConveyor.php,Yaml/KeyRegister.php}'
+
+    Aeliot\Bundle\TransMaintain\Service\Yaml\KeyRegister:
+        arguments:
+            $dirs: [ ]
+            $position: '%aeliot_trans_maintain.insert_missed_keys%'
 
     Aeliot\Bundle\TransMaintain\Service\Yaml\TransformationConveyor:
         arguments:
