--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,8 @@
     "symfony/dependency-injection": "^4.4",
     "symfony/filesystem": ">=4.4",
     "symfony/http-kernel": "^4.4",
+    "symfony/translation": "^4.4",
+    "symfony/translation-contracts": "^2.4",
     "symfony/yaml": ">=4.4"
   },
   "config": {
