--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,12 @@
   },
   "require": {
     "php": "^7.4",
+    "ext-json": "*",
     "symfony/config": "^4.4",
     "symfony/console": "^4.4",
     "symfony/dependency-injection": "^4.4",
     "symfony/filesystem": ">=4.4",
+    "symfony/finder": "^4.4",
     "symfony/http-kernel": "^4.4",
     "symfony/translation": "^4.4",
     "symfony/translation-contracts": "^2.4",
