--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,13 @@
   "require": {
     "php": "^7.4",
     "ext-json": "*",
-    "symfony/config": "^4.4",
-    "symfony/console": "^4.4",
-    "symfony/dependency-injection": "^4.4",
+    "symfony/config": ">=4.4",
+    "symfony/console": ">=4.4",
+    "symfony/dependency-injection": ">=4.4",
     "symfony/filesystem": ">=4.4",
-    "symfony/finder": "^4.4",
-    "symfony/http-kernel": "^4.4",
-    "symfony/translation": "^4.4",
+    "symfony/finder": ">=4.4",
+    "symfony/http-kernel": ">=4.4",
+    "symfony/translation": ">=4.4",
     "symfony/translation-contracts": "^v2.3.0",
     "symfony/yaml": ">=4.4"
   },
