--- a/composer.json
+++ b/composer.json
@@ -34,5 +34,8 @@
   "prefer-stable": true,
   "require-dev": {
     "phpunit/phpunit": "^9.5"
+  },
+  "scripts": {
+    "test": "vendor/bin/phpunit"
   }
 }
