--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     }
   },
   "require": {
-    "php": "^7.4",
+    "php": ">=7.4",
     "ext-json": "*",
     "google/cloud-translate": "^1.10",
     "symfony/config": ">=3.4",
