--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
   "prefer-stable": true,
   "require-dev": {
     "phpunit/phpunit": "^9.5",
+    "symfony/dotenv": "^5.3",
     "symfony/framework-bundle": ">=3.4",
     "symfony/translation": "^5.3"
   },
