--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
   },
   "scripts": {
     "test": [
+      "tests/console lint:container",
       "vendor/bin/phpunit",
       "vendor/bin/php-cs-fixer fix -vv --using-cache=no"
     ]
