--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -66,6 +66,8 @@ services:
 
     Aeliot\Bundle\TransMaintain\Service\ApiTranslator\Translator: ~
 
+    Aeliot\Bundle\TransMaintain\Service\ReportBagConsoleRenderer: ~
+
     Google\Cloud\Translate\V2\TranslateClient:
         arguments:
             $config: '%aeliot_trans_maintain.translation_api.google.config%'
