--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -4,6 +4,9 @@ includes:
 parameters:
     level: 7
     reportUnmatchedIgnoredErrors: false
+    excludePaths:
+        analyseAndScan:
+            - src/Service/Translator/LegacyTranslator.php
 
     paths:
         - src
