Config default translations path for test framework

--- a/tests/config/packages/framework.yaml
+++ b/tests/config/packages/framework.yaml
@@ -3,6 +3,8 @@ framework:
     test: true
     session:
         handler_id: 'Symfony\Component\HttpFoundation\Session\Storage\Handler\NullSessionHandler'
+    translator:
+        default_path: '%kernel.project_dir%/../translations'
 
 services:
     Symfony\Component\HttpFoundation\Session\Storage\Handler\NullSessionHandler:
