--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require-dev": {
+    "aeliot-tm/phpunit-codecoverage-baseline": "^1.1",
     "dg/bypass-finals": "^1.1",
     "friendsofphp/php-cs-fixer": "^3.8",
     "phpstan/extension-installer": "^1.1",
@@ -49,7 +50,8 @@
     "test": [
       "vendor/bin/phpunit",
       "vendor/bin/php-cs-fixer fix -vv --using-cache=no"
-    ]
+    ],
+    "coverage": "vendor/bin/pccb_clover_compare -c report/coverage/clover.xml -vv"
   },
   "suggest": {
     "symfony/translation": "Can wrap provided of Translator and log missed translations. Tested with versions: 3.4, 4.4 and 5.3."
