--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   php:
     build:
       context: ..
-      dockerfile: docker/.Dockerfile
+      dockerfile: docker/Dockerfile
       args:
         PHP_IMAGE: ${PHP_IMAGE:-php:7.4-cli}
         PHP_XDEBUG_PORT: ${PHP_XDEBUG_PORT:-9003}
