--- a/tests/config/packages/framework.yaml
+++ b/tests/config/packages/framework.yaml
@@ -1,6 +1,7 @@
 framework:
     csrf_protection: false
     test: true
+    secret: '_change_me_'
     session:
         handler_id: 'Symfony\Component\HttpFoundation\Session\Storage\Handler\NullSessionHandler'
     translator:
