--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -26,6 +26,6 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 WORKDIR /srv/app
 
 COPY composer.json composer.json
-RUN composer install --prefer-dist --no-suggest --no-interaction --no-scripts --classmap-authoritative --no-autoloader
+RUN composer install --classmap-authoritative --no-autoloader --no-interaction --no-progress --no-scripts --no-suggest --prefer-dist
 COPY ./ ./
 RUN composer dump-autoload
