--- a/composer.json
+++ b/composer.json
@@ -14,17 +14,17 @@
     }
   },
   "require": {
-    "php": ">=7.4",
+    "php": "^7.4|^8.0",
     "ext-json": "*",
     "google/cloud-translate": "^1.10",
-    "symfony/config": ">=3.4",
-    "symfony/console": ">=3.4",
-    "symfony/dependency-injection": ">=3.4",
-    "symfony/filesystem": ">=3.4",
-    "symfony/finder": ">=3.4",
-    "symfony/http-kernel": ">=3.4",
-    "symfony/translation-contracts": "^v2.0.0",
-    "symfony/yaml": ">=3.4"
+    "symfony/config": "^3.4|^4.0|5.0|^6.0",
+    "symfony/console": "^3.4|^4.0|5.0|^6.0",
+    "symfony/dependency-injection": "^3.4|^4.0|5.0|^6.0",
+    "symfony/filesystem": "^3.4|^4.0|5.0|^6.0",
+    "symfony/finder": "^3.4|^4.0|5.0|^6.0",
+    "symfony/http-kernel": "^3.4|^4.0|5.0|^6.0",
+    "symfony/translation-contracts": "^1.1|^2.0|^3.0",
+    "symfony/yaml": "^3.4|^4.0|5.0|^6.0"
   },
   "config": {
     "sort-packages": true,
@@ -42,9 +42,9 @@
     "phpstan/phpstan": "^1.8",
     "phpstan/phpstan-symfony": "^1.2",
     "phpunit/phpunit": "^9.5",
-    "symfony/dotenv": "^5.3",
-    "symfony/framework-bundle": ">=3.4",
-    "symfony/translation": "^3.4||^4.4||^5.0"
+    "symfony/dotenv": "^3.4|^4.0|5.0|^6.0",
+    "symfony/framework-bundle": "^3.4|^4.0|5.0|^6.0",
+    "symfony/translation": "^3.4|^4.0|5.0|^6.0"
   },
   "scripts": {
     "test": [
