--- a/composer.json
+++ b/composer.json
@@ -37,9 +37,10 @@
   "require-dev": {
     "aeliot-tm/phpunit-codecoverage-baseline": "^2.0",
     "dg/bypass-finals": "^1.1",
-    "friendsofphp/php-cs-fixer": "^3.8",
+    "friendsofphp/php-cs-fixer": "^2.19.3|^3.8",
     "phpstan/extension-installer": "^1.1",
     "phpstan/phpstan": "^1.8",
+    "phpstan/phpstan-phpunit": "^1.3",
     "phpstan/phpstan-symfony": "^1.2",
     "phpunit/phpunit": "^9.5",
     "symfony/dotenv": "^3.4|^4.0|5.0|^6.0",
