--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -1,33 +1,42 @@
-ARG PHP_IMAGE=php:7.4-cli
-FROM ${PHP_IMAGE}
-RUN apt-get --allow-releaseinfo-change update && apt-get install -y \
-        libxml2-dev \
-        libzip-dev \
-        unzip  \
-    && docker-php-ext-install -j$(nproc) xml \
-    && docker-php-ext-install -j$(nproc) zip
+ARG PHP_VERSION=8.2.7
+ARG DEBIAN_RELEASE=bullseye
 
-# xDebug
-ARG XDEBUG_VERSION=3.1.6
-ARG PHP_XDEBUG_PORT=9003
-RUN pecl install xdebug-${XDEBUG_VERSION} \
-    && docker-php-ext-enable xdebug \
-    && echo "xdebug.mode=coverage,debug" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
-    && echo "xdebug.start_with_request=yes" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
-    && echo "xdebug.client_host=\"host.docker.internal\"" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
-    && echo "xdebug.discover_client_host=true" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
-    && echo "xdebug.client_port=\${PHP_XDEBUG_PORT}" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+FROM php:${PHP_VERSION}-cli-${DEBIAN_RELEASE}
+
+ARG COMPOSER_ALLOW_SUPERUSER=1
+ARG COMPOSER_NO_INTERACTION=1
+ARG COMPOSER_VERSION=2.7.6
+ARG DEBIAN_FRONTEND=noninteractive
+ARG DOCKER_PHP_DEPS='libxml2-dev libzip-dev unzip'
+ARG XDEBUG_VERSION=3.2.1
+
+RUN set -xe; \
+    apt-get --allow-releaseinfo-change update && \
+    apt-get install -y -qq ${DOCKER_PHP_DEPS} --no-install-suggests --no-install-recommends && \
+    docker-php-ext-install -j$(nproc) xml && \
+    docker-php-ext-install -j$(nproc) zip && \
+    pecl install xdebug-${XDEBUG_VERSION} && docker-php-ext-enable xdebug && \
+    rm -rf /var/lib/apt/lists/* && \
+    apt-get clean
+
+COPY .docker/php/conf.d/*.ini /usr/local/etc/php/conf.d/
 
 # Memory limit
 RUN echo "memory_limit = 1G" >> /usr/local/etc/php/php.ini
 
-RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" \
-    && php composer-setup.php --filename composer --install-dir=/bin \
-    && php -r "unlink('composer-setup.php');" \
+# Install composer
+RUN set -xe; \
+    curl -sS https://getcomposer.org/installer | php -- --filename=composer --install-dir=/usr/local/bin --version=${COMPOSER_VERSION} > /dev/null 2>&1 && \
+    chmod +x /usr/local/bin/composer
 
-WORKDIR /srv/app
+WORKDIR /app
 
 COPY composer.* ./
-RUN composer install --classmap-authoritative --no-autoloader --no-interaction --no-progress --no-scripts --no-suggest --prefer-dist
+
+RUN set -xe; \
+    composer install --no-autoloader --no-dev --no-interaction --no-progress --no-scripts --no-suggest --prefer-dist && \
+    composer clear-cache && \
+    rm -rf ./vendor/*/*/tests
+
 COPY ./ ./
 RUN composer dump-autoload
